# whitepaper

./: .gitignore  01-ai-prompt-architecture.md  02-mcp-rag-architecture.md  03-serving-architecture.md  README.md
demo/infra-core-demo/: .env.example  .gitignore  Makefile  README.md
demo/infra-core-demo/ansible/inventory/: aws_ec2.yml
demo/infra-core-demo/ansible/playbooks/: site.yml
demo/infra-core-demo/bff/: Dockerfile  package.json
demo/infra-core-demo/docs/: failback-strategy.md  runbook.md
demo/infra-core-demo/elk/: docker-compose.yml
demo/infra-core-demo/elk/filebeat/: filebeat.yml
demo/infra-core-demo/k8s/base/: kustomization.yaml  namespace.yaml
demo/infra-core-demo/kafka/: package.json
demo/infra-core-demo/kafka/src/: logger.ts  types.ts
demo/mcp-demo/: .gitignore  Makefile  README.md  docker-compose.yml
demo/mcp-demo/.github/workflows/: ci.yml
demo/mcp-demo/1-data-indexer-agent/: .env.example  Dockerfile  package.json  tsconfig.json
demo/mcp-demo/2-mcp-serving-agent/: .env.example  .gitignore  Cargo.toml
demo/mcp-demo/2-mcp-serving-agent/src/: main.rs
demo/mcp-demo/2-mcp-serving-agent/src/eval/: harness.rs  mod.rs  model_tuner.rs
demo/mcp-demo/2-mcp-serving-agent/src/guardrail/: mod.rs
demo/mcp-demo/2-mcp-serving-agent/src/scheduler/: background_worker.rs  mod.rs
demo/mcp-demo/2-mcp-serving-agent/src/search_engine/: mod.rs  rrf_fusion.rs
demo/mcp-demo/2-mcp-serving-agent/src/tools/: mod.rs
demo/mcp-demo/2-mcp-serving-agent/src/transport/: mod.rs
showcase/: company-ai-setup-README.md  dart-ai-trading-bot-README.md
(+42 files in other folders)
