[package]
name = "mcp-serving-agent"
version = "0.1.0"
edition = "2021"
description = "High-performance MCP Server for RAG (Rust)"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
neo4rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = { version = "0.31", features = ["bundled"] }
# rmcp (Model Context Protocol SDK for Rust)
rmcp = "0.1.0"
